# todo

./: README.md
cli/: Cargo.toml
cli/src/: display.rs  item_list.rs  lib.rs  list_ui.rs  main.rs  prompt.rs  todo.rs
cli/src/settings/: colors.rs  controls.rs  help_menu.rs  menu.rs  mod.rs  settings.rs
core/: Cargo.toml
core/src/: buffer.rs  configman.rs  entry.rs  entrymanager.rs  formatter.rs  lib.rs  listui.rs  main.rs  prompt.rs
src/: control.rs  display.rs  ui.rs
