[package]
name = "cli"
version = "0.1.0"
authors = ["CircuitFire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../core"}
frames = {git = "https://github.com/CircuitFire/frames.git", features = [ "serde" ]}
bytebuffer = {git = "https://github.com/CircuitFire/bytebuffer.git"}
ez-quick-xml = {git = "https://github.com/CircuitFire/ez-quick-xml.git"}